Circuit tree beginnings.

--- a/game.html
+++ b/game.html
@@ -2,4 +2,6 @@
 <html>
 <canvas></canvas>
 <script src="atom.js"></script>
+<script src="plants/plant.js"></script>
+<script src="plants/circuit-tree.js"></script>
 <script src="game.js"></script>
