More plant stuff

--- a/game.html
+++ b/game.html
@@ -2,6 +2,8 @@
 <html>
 <canvas></canvas>
 <script src="atom.js"></script>
+<script src="colors.js"></script>
 <script src="plants/plant.js"></script>
 <script src="plants/circuit-tree.js"></script>
+<script src="plants/binary-bush.js"></script>
 <script src="game.js"></script>
