--- a/game.html
+++ b/game.html
@@ -3,6 +3,7 @@
 <canvas></canvas>
 <script src="atom.js"></script>
 <script src="colors.js"></script>
+<script src="plants/seed.js"></script>
 <script src="plants/plant.js"></script>
 <script src="plants/circuit-tree.js"></script>
 <script src="plants/binary-bush.js"></script>
