--- a/game.html
+++ b/game.html
@@ -11,6 +11,12 @@
   height: 100%;
 }
 body, html { width: 100%; height: 100%;}
+canvas {
+  border-radius: 30px;
+}
+body {
+  background-color: #eee;
+}
 </style>
 <div class='centerbox'><canvas></canvas></div>
 <script src="atom.js"></script>
