--- a/game.html
+++ b/game.html
@@ -7,12 +7,14 @@
   -webkit-box-pack: center;
   -webkit-box-align: center;
 
+
   width: 100%;
   height: 100%;
 }
 body, html { width: 100%; height: 100%;}
 canvas {
   border-radius: 30px;
+  box-shadow: 0 0 10px #777;
 }
 body {
   background-color: #eee;
