--- a/game.html
+++ b/game.html
@@ -10,8 +10,9 @@
 
   width: 100%;
   height: 100%;
+  margin: 0; padding: 0;
 }
-body, html { width: 100%; height: 100%;}
+body, html { width: 100%; height: 100%; padding: 0; margin: 0; }
 canvas {
   border-radius: 30px;
   box-shadow: 0 0 10px #777;
