--- a/game.html
+++ b/game.html
@@ -27,5 +27,6 @@ body {
 <script src="plants/seed.js"></script>
 <script src="plants/plant.js"></script>
 <script src="plants/circuit-tree.js"></script>
+<script src="plants/curlicure.js"></script>
 <script src="plants/binary-bush.js"></script>
 <script src="game.js"></script>
