--- a/game.html
+++ b/game.html
@@ -28,4 +28,5 @@ body {
 <script src="plants/plant.js"></script>
 <script src="plants/circuit-tree.js"></script>
 <script src="plants/binary-bush.js"></script>
+<script src="radial-selector.js"></script>
 <script src="game.js"></script>
