Add nutrients, clicking on berries.

--- a/game.html
+++ b/game.html
@@ -30,4 +30,5 @@ body {
 <script src="plants/curlicure.js"></script>
 <script src="plants/binary-bush.js"></script>
 <script src="radial-selector.js"></script>
+<script src="nutrients.js"></script>
 <script src="game.js"></script>
